{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 156,
  "lineage": "6a50ad1a-c334-cce1-213f-36ba345e5b9b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/frontendIPConfigurations/udacity-frontend-ip",
                "name": "udacity-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/udacity-pip"
              }
            ],
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb",
            "location": "southcentralus",
            "name": "udacity-lb",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "udacity": "Udacity Course 1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-0/ipConfigurations/udacity-ipconf-0",
              "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-1/ipConfigurations/udacity-ipconf-1"
            ],
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/udacity-pool",
            "loadbalancer_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb",
            "name": "udacity-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-0",
            "internal_domain_name_suffix": "xdz5ux4xrilujpdfonbrgx042e.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "udacity-ipconf-0",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-network/subnets/internal"
              }
            ],
            "location": "southcentralus",
            "mac_address": "60-45-BD-E3-18-66",
            "name": "udacity-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "udacity": "Udacity Course 1"
            },
            "virtual_machine_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Compute/virtualMachines/udacity-vm-0"
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-1",
            "internal_domain_name_suffix": "xdz5ux4xrilujpdfonbrgx042e.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "udacity-ipconf-1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-network/subnets/internal"
              }
            ],
            "location": "southcentralus",
            "mac_address": "60-45-BD-E3-19-93",
            "name": "udacity-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "udacity": "Udacity Course 1"
            },
            "virtual_machine_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Compute/virtualMachines/udacity-vm-1"
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/udacity-pool",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-0/ipConfigurations/udacity-ipconf-0|/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/udacity-pool",
            "ip_configuration_name": "udacity-ipconf-0",
            "network_interface_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/udacity-pool",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-1/ipConfigurations/udacity-ipconf-1|/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/udacity-pool",
            "ip_configuration_name": "udacity-ipconf-1",
            "network_interface_id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-nic-1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg",
            "location": "southcentralus",
            "name": "udacity-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-vnet-inbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-vnet-outbound",
                "priority": 300,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-internet-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "udacity": "Udacity Course 1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg/securityRules/allow-http-from-lb",
            "name": "allow-http-from-lb",
            "network_security_group_name": "udacity-nsg",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_vnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg/securityRules/allow-vnet-inbound",
            "name": "allow-vnet-inbound",
            "network_security_group_name": "udacity-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_vnet_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg/securityRules/allow-vnet-outbound",
            "name": "allow-vnet-outbound",
            "network_security_group_name": "udacity-nsg",
            "priority": 300,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_internet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg/securityRules/deny-internet-inbound",
            "name": "deny-internet-inbound",
            "network_security_group_name": "udacity-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/udacity-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.97.24.118",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "udacity-pip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "udacity": "Udacity Course 1"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "udacity-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5ffaf3b8-8ad7-4417-bc65-7343135f5ee4",
            "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-network",
            "location": "southcentralus",
            "name": "udacity-network",
            "resource_group_name": "Azuredevops",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/e85c2d28-e9aa-4775-85de-521be630b9fa/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-network/subnets/internal",
                "name": "internal"
              }
            ],
            "tags": {
              "udacity": "Udacity Course 1"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}